--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "salesforce-app",
+  "type": "module",
   "private": true,
   "version": "1.0.0",
   "description": "Salesforce App",
@@ -18,6 +19,9 @@
   "devDependencies": {
     "@lwc/eslint-plugin-lwc": "^1.1.2",
     "@prettier/plugin-xml": "^2.0.1",
+    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
     "@salesforce/eslint-config-lwc": "^3.2.3",
     "@salesforce/eslint-plugin-aura": "^2.0.0",
     "@salesforce/eslint-plugin-lightning": "^1.0.0",
@@ -28,14 +32,17 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.0",
-    "prettier-plugin-apex": "^1.10.0"
+    "prettier-plugin-apex": "^1.10.0",
+    "rollup-plugin-node-builtins": "^2.1.2"
   },
-  "lint-staged": {
-    "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
-      "prettier --write"
-    ],
-    "**/{aura,lwc}/**": [
-      "eslint"
-    ]
+  "lint-staged": {},
+  "dependencies": {
+    "dayjs": "^1.11.7",
+    "json-stable-stringify": "^1.0.2",
+    "mustache": "^4.2.0",
+    "rollup": "^3.7.4",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "xml-js": "^1.6.11",
+    "zx": "^7.1.1"
   }
 }
