--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     ]
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
     "json-stable-stringify": "^1.0.2",
+    "jsonschema": "^1.4.1",
+    "lodash": "^4.17.21",
     "mustache": "^4.2.0",
     "rollup": "^3.7.4",
     "rollup-plugin-node-globals": "^1.4.0",
